--- a/packages/regression_model/requirements.txt
+++ b/packages/regression_model/requirements.txt
@@ -6,9 +6,9 @@ pandas>=0.25.3,<0.26.0
 scikit-learn>=0.22.1,<0.23.0
 joblib>=0.14.1,<0.15.0
 
-#testing requirements
+# testing requirements
 pytest>=5.3.2,<6.0.0
 
-#packaging
-setuptools>41.4.0,<42.0.0
+# packaging
+setuptools>=41.4.0,<42.0.0
 wheel>=0.33.6,<0.34.0
