--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -1,7 +1,11 @@
 #api
 flask==1.0.2
 
+#schema validation
+marshmallow == 2.17.0
+
 #local regression_model package
 #updata with your local path
 
 -e "C:\Users\Ajay Hase\Documents\Courses\udemy-self\ml-deployment\packages\regression_model"
+
