--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -1,11 +1,13 @@
+--extra-index-url=${PIP_EXTRA_INDEX_URL}
+
 #api
 flask==1.0.2
 
 #schema validation
 marshmallow == 2.17.0
 
-#local regression_model package
-#updata with your local path
+# Install from gemfury
+regression-model==0.1.0
 
--e "C:\Users\Ajay Hase\Documents\Courses\udemy-self\ml-deployment\packages\regression_model"
+
 
