--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,7 +112,18 @@ jobs:
             py.test -vv packages/ml_api/tests -m differential
 
 
-workflows:
+
+  section_10_deploy_to_heroku:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: Deploy to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+
+
+
   version: 2
   test-all:
     jobs:
@@ -124,6 +135,14 @@ workflows:
             - test_regression_model
             - test_ml_api
             - section_9_differential_tests
+          filters:
+            branches:
+              only:
+                - master
+                
+      - section_10_deploy_to_heroku:
+          requires:
+            - train_and_upload_regression_model
           filters:
             branches:
               only:
